--- a/BattleBoats-Scenes/src/Scenes/LoginPage.fxml
+++ b/BattleBoats-Scenes/src/Scenes/LoginPage.fxml
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2a65a1;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginController">
-   <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@../Assets/menuBattleship.jpg" />
-      </image>
-   </ImageView>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2a65a1;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginController">
 
-   <AnchorPane layoutX="5.0" layoutY="78.0" prefHeight="319.0" prefWidth="295.0">
-      <TextField fx:id="username" alignment="BASELINE_CENTER" layoutX="37.0" layoutY="82.0" prefHeight="31.0" prefWidth="219.0" text="username">
+   <AnchorPane layoutX="153.0" layoutY="67.0" prefHeight="319.0" prefWidth="295.0" style="-fx-background-color: #275e96;">
+      <TextField fx:id="username" alignment="BASELINE_CENTER" layoutX="28.0" layoutY="82.0" prefHeight="25.0" prefWidth="240.0" text="username">
          <font>
             <Font size="15.0" />
          </font>
@@ -31,18 +23,12 @@
             <Font name="Courier New" size="31.0" />
          </font>
       </Label>
-      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="94.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="94.0" layoutY="160.0"  pickOnBounds="true" preserveRatio="true" />
    </AnchorPane>
-   <Label layoutX="71.0" layoutY="14.0" prefHeight="38.0" prefWidth="163.0" text="BattleBoats">
+   <Label layoutX="219.0" layoutY="14.0" prefHeight="38.0" prefWidth="163.0" text="BattleBoats">
       <font>
          <Font name="Roboto" size="30.0" />
       </font>
    </Label>
-   <ImageView fitHeight="69.0" fitWidth="81.0" layoutX="519.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@../Assets/edosian.png" />
-      </image>
-   </ImageView>
-   <Label layoutX="536.0" layoutY="70.0" text="Edosians" />
 
 </AnchorPane>
