--- a/BattleBoats-Scenes/src/Scenes/LoginPage.fxml
+++ b/BattleBoats-Scenes/src/Scenes/LoginPage.fxml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2a65a1;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2a65a1;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginController">
+   <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../Assets/battleship-347433_1280.jpg" />
+      </image>
+   </ImageView>
 
-   <AnchorPane layoutX="153.0" layoutY="67.0" prefHeight="319.0" prefWidth="295.0" style="-fx-background-color: #275e96;">
+   <AnchorPane layoutX="153.0" layoutY="67.0" prefHeight="319.0" prefWidth="295.0">
       <TextField fx:id="username" alignment="BASELINE_CENTER" layoutX="28.0" layoutY="82.0" prefHeight="25.0" prefWidth="240.0" text="username">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <Button contentDisplay="TOP" graphicTextGap="6.0" layoutX="94.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#onPlayEvent" prefHeight="44.0" prefWidth="107.0" style="-fx-background-color: #90b8e0;" text="Play" textAlignment="CENTER">
+      <Button contentDisplay="TOP" graphicTextGap="6.0" layoutX="94.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#onPlayEvent" prefHeight="44.0" prefWidth="107.0" text="Play" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Label contentDisplay="CENTER" graphicTextGap="2.0" layoutX="80.0" layoutY="14.0" prefHeight="46.0" prefWidth="137.0" text="Sign in" textAlignment="CENTER">
+      <Label contentDisplay="CENTER" graphicTextGap="2.0" layoutX="80.0" layoutY="14.0" prefHeight="46.0" prefWidth="137.0" text="Sign in" textAlignment="CENTER" textFill="#f0fcff">
          <font>
             <Font name="Courier New" size="31.0" />
          </font>
       </Label>
-      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="94.0" layoutY="160.0"  pickOnBounds="true" preserveRatio="true" />
    </AnchorPane>
    <Label layoutX="219.0" layoutY="14.0" prefHeight="38.0" prefWidth="163.0" text="BattleBoats">
       <font>
          <Font name="Roboto" size="30.0" />
       </font>
    </Label>
+   <ImageView fitHeight="67.0" fitWidth="97.0" layoutX="489.0" layoutY="319.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../Assets/edosian.png" />
+      </image>
+   </ImageView>
 
 </AnchorPane>
